@@ -158,14 +158,14 @@ typing/typecore.cmx: parsing/asttypes.cmi typing/ctype.cmx typing/env.cmx \
     typing/types.cmx typing/typetexp.cmx typing/typecore.cmi 
 typing/typedecl.cmo: utils/config.cmi typing/ctype.cmi typing/env.cmi \
     typing/ident.cmi typing/includecore.cmi parsing/location.cmi \
-    parsing/parsetree.cmi typing/primitive.cmi typing/printtyp.cmi \
-    typing/subst.cmi typing/typedtree.cmi typing/types.cmi \
-    typing/typetexp.cmi typing/typedecl.cmi 
+    utils/misc.cmi parsing/parsetree.cmi typing/path.cmi typing/primitive.cmi \
+    typing/printtyp.cmi typing/subst.cmi typing/typedtree.cmi \
+    typing/types.cmi typing/typetexp.cmi typing/typedecl.cmi 
 typing/typedecl.cmx: utils/config.cmx typing/ctype.cmx typing/env.cmx \
     typing/ident.cmx typing/includecore.cmx parsing/location.cmx \
-    parsing/parsetree.cmi typing/primitive.cmx typing/printtyp.cmx \
-    typing/subst.cmx typing/typedtree.cmx typing/types.cmx \
-    typing/typetexp.cmx typing/typedecl.cmi 
+    utils/misc.cmx parsing/parsetree.cmi typing/path.cmx typing/primitive.cmx \
+    typing/printtyp.cmx typing/subst.cmx typing/typedtree.cmx \
+    typing/types.cmx typing/typetexp.cmx typing/typedecl.cmi 
 typing/typedtree.cmo: parsing/asttypes.cmi typing/env.cmi typing/ident.cmi \
     parsing/location.cmi utils/misc.cmi typing/path.cmi typing/primitive.cmi \
     typing/types.cmi typing/typedtree.cmi 
@@ -216,11 +216,11 @@ bytecomp/translcore.cmi: parsing/asttypes.cmi typing/ident.cmi \
 bytecomp/translmod.cmi: bytecomp/lambda.cmi typing/typedtree.cmi 
 bytecomp/translobj.cmi: typing/ident.cmi bytecomp/lambda.cmi 
 bytecomp/bytegen.cmo: parsing/asttypes.cmi typing/ident.cmi \
-    bytecomp/instruct.cmi bytecomp/lambda.cmi parsing/location.cmi \
-    utils/misc.cmi typing/primitive.cmi typing/types.cmi bytecomp/bytegen.cmi 
+    bytecomp/instruct.cmi bytecomp/lambda.cmi utils/misc.cmi \
+    typing/primitive.cmi typing/types.cmi bytecomp/bytegen.cmi 
 bytecomp/bytegen.cmx: parsing/asttypes.cmi typing/ident.cmx \
-    bytecomp/instruct.cmx bytecomp/lambda.cmx parsing/location.cmx \
-    utils/misc.cmx typing/primitive.cmx typing/types.cmx bytecomp/bytegen.cmi 
+    bytecomp/instruct.cmx bytecomp/lambda.cmx utils/misc.cmx \
+    typing/primitive.cmx typing/types.cmx bytecomp/bytegen.cmi 
 bytecomp/bytelibrarian.cmo: utils/clflags.cmo utils/config.cmi \
     bytecomp/emitcode.cmi utils/misc.cmi bytecomp/bytelibrarian.cmi 
 bytecomp/bytelibrarian.cmx: utils/clflags.cmx utils/config.cmx \
@@ -233,13 +233,13 @@ bytecomp/bytelink.cmx: utils/ccomp.cmx utils/clflags.cmx utils/config.cmx \
     bytecomp/emitcode.cmx typing/ident.cmx bytecomp/instruct.cmx \
     utils/misc.cmx bytecomp/opcodes.cmx bytecomp/symtable.cmx \
     bytecomp/bytelink.cmi 
-bytecomp/emitcode.cmo: parsing/asttypes.cmi utils/config.cmi typing/env.cmi \
-    typing/ident.cmi bytecomp/instruct.cmi bytecomp/lambda.cmi \
-    bytecomp/meta.cmi utils/misc.cmi bytecomp/opcodes.cmo \
+bytecomp/emitcode.cmo: parsing/asttypes.cmi utils/clflags.cmo \
+    utils/config.cmi typing/env.cmi typing/ident.cmi bytecomp/instruct.cmi \
+    bytecomp/lambda.cmi bytecomp/meta.cmi utils/misc.cmi bytecomp/opcodes.cmo \
     bytecomp/translmod.cmi typing/types.cmi bytecomp/emitcode.cmi 
-bytecomp/emitcode.cmx: parsing/asttypes.cmi utils/config.cmx typing/env.cmx \
-    typing/ident.cmx bytecomp/instruct.cmx bytecomp/lambda.cmx \
-    bytecomp/meta.cmx utils/misc.cmx bytecomp/opcodes.cmx \
+bytecomp/emitcode.cmx: parsing/asttypes.cmi utils/clflags.cmx \
+    utils/config.cmx typing/env.cmx typing/ident.cmx bytecomp/instruct.cmx \
+    bytecomp/lambda.cmx bytecomp/meta.cmx utils/misc.cmx bytecomp/opcodes.cmx \
     bytecomp/translmod.cmx typing/types.cmx bytecomp/emitcode.cmi 
 bytecomp/instruct.cmo: typing/env.cmi typing/ident.cmi bytecomp/lambda.cmi \
     typing/types.cmi bytecomp/instruct.cmi 
@@ -384,11 +384,13 @@ asmcomp/clambda.cmo: parsing/asttypes.cmi typing/ident.cmi \
 asmcomp/clambda.cmx: parsing/asttypes.cmi typing/ident.cmx \
     bytecomp/lambda.cmx asmcomp/clambda.cmi 
 asmcomp/closure.cmo: parsing/asttypes.cmi asmcomp/clambda.cmi \
-    asmcomp/compilenv.cmi typing/ident.cmi bytecomp/lambda.cmi utils/misc.cmi \
-    utils/tbl.cmi asmcomp/closure.cmi 
+    utils/clflags.cmo asmcomp/compilenv.cmi typing/ident.cmi \
+    bytecomp/lambda.cmi utils/misc.cmi typing/primitive.cmi utils/tbl.cmi \
+    asmcomp/closure.cmi 
 asmcomp/closure.cmx: parsing/asttypes.cmi asmcomp/clambda.cmx \
-    asmcomp/compilenv.cmx typing/ident.cmx bytecomp/lambda.cmx utils/misc.cmx \
-    utils/tbl.cmx asmcomp/closure.cmi 
+    utils/clflags.cmx asmcomp/compilenv.cmx typing/ident.cmx \
+    bytecomp/lambda.cmx utils/misc.cmx typing/primitive.cmx utils/tbl.cmx \
+    asmcomp/closure.cmi 
 asmcomp/cmm.cmo: asmcomp/arch.cmo typing/ident.cmi asmcomp/cmm.cmi 
 asmcomp/cmm.cmx: asmcomp/arch.cmx typing/ident.cmx asmcomp/cmm.cmi 
 asmcomp/cmmgen.cmo: asmcomp/arch.cmo parsing/asttypes.cmi asmcomp/clambda.cmi \
@@ -416,11 +418,11 @@ asmcomp/compilenv.cmo: asmcomp/clambda.cmi utils/config.cmi typing/env.cmi \
 asmcomp/compilenv.cmx: asmcomp/clambda.cmx utils/config.cmx typing/env.cmx \
     typing/ident.cmx utils/misc.cmx asmcomp/compilenv.cmi 
 asmcomp/emit.cmo: asmcomp/arch.cmo asmcomp/cmm.cmi asmcomp/compilenv.cmi \
-    utils/config.cmi asmcomp/emitaux.cmi asmcomp/linearize.cmi \
+    asmcomp/emitaux.cmi asmcomp/linearize.cmi parsing/location.cmi \
     asmcomp/mach.cmi utils/misc.cmi asmcomp/proc.cmi asmcomp/reg.cmi \
     asmcomp/emit.cmi 
 asmcomp/emit.cmx: asmcomp/arch.cmx asmcomp/cmm.cmx asmcomp/compilenv.cmx \
-    utils/config.cmx asmcomp/emitaux.cmx asmcomp/linearize.cmx \
+    asmcomp/emitaux.cmx asmcomp/linearize.cmx parsing/location.cmx \
     asmcomp/mach.cmx utils/misc.cmx asmcomp/proc.cmx asmcomp/reg.cmx \
     asmcomp/emit.cmi 
 asmcomp/emitaux.cmo: asmcomp/emitaux.cmi 
